--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,9 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "form-data": "^4.0.5",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
+    "nodemailer": "^6.9.13",
     "openai": "^6.16.0",
     "pg": "^8.17.2",
     "sharp": "^0.34.5"
