--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "@supabase/supabase-js": "^2.91.0",
     "@woocommerce/woocommerce-rest-api": "^1.0.2",
     "axios": "^1.13.3",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
