--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.994.0",
     "@woocommerce/woocommerce-rest-api": "^1.0.2",
     "axios": "^1.13.3",
     "bcryptjs": "^2.4.3",
